# PhysicalRenderer

./: CMakeLists.txt  TODO.md
src/: Bounds.h  ErrorFloat.cpp  ErrorFloat.h  Film.cpp  Film.h  MaterialHelper.h  MathHelper.h  Pixel.cpp  Pixel.h  Ray.cpp  Ray.h  SampleHelper.h  Scene.h  Transform.cpp  Transform.h  TransformHelper.h  main.cpp
src/camera/: Camera.cpp  Camera.h  CameraSample.cpp  CameraSample.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ProjectiveCamera.cpp  ProjectiveCamera.h
src/filter/: BoxFilter.cpp  BoxFilter.h  Filter.cpp  Filter.h  GaussianFilter.cpp  GaussianFilter.h  MitchellFilter.cpp  MitchellFilter.h  SincFilter.cpp  SincFilter.h  TriangleFilter.cpp  TriangleFilter.h
src/integrator/: Integrator.cpp  Integrator.h  SamplerIntegrator.cpp  SamplerIntegrator.h
src/material/: BeckmannSpizzichinoDistribution.cpp  BeckmannSpizzichinoDistribution.h  BxDF.cpp  BxDF.h  ConductorFresnel.cpp  ConductorFresnel.h  DielectricFresnel.cpp  DielectricFresnel.h  Fresnel.cpp  Fresnel.h  FresnelSpecular.cpp  FresnelSpecular.h  LambertianReflection.cpp  LambertianReflection.h  LambertianTransmission.cpp  LambertianTransmission.h  MicrofacetDistribution.cpp  MicrofacetDistribution.h  MicrofacetReflection.cpp  MicrofacetReflection.h  MicrofacetTransmission.cpp  MicrofacetTransmission.h  OrenNayarReflection.cpp  OrenNayarReflection.h  SpecularReflection.cpp  SpecularReflection.h  SpecularTransmission.cpp  SpecularTransmission.h  TrowbridgeReitzDistribution.cpp  TrowbridgeReitzDistribution.h
src/medium/: Medium.h
src/shape/: Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
src/spectrum/: RGBSpectrum.cpp  RGBSpectrum.h  Spectrum.h  XYZSpectrum.cpp  XYZSpectrum.h
