cmake_minimum_required(VERSION 3.22)
project(PhysicalRenderer)

set(CMAKE_CXX_STANDARD 17)

include_directories(src)
set(HEADER
        src/MathHelper.h
        src/TransformHelper.h
        src/MaterialHelper.h
        src/SampleHelper.h
        src/Bounds.h
        src/Pixel.h
        src/Film.h
        src/Transform.h
        src/Ray.h
        src/Scene.h
        src/spectrum/Spectrum.h
        src/spectrum/RGBSpectrum.h
        src/spectrum/XYZSpectrum.h
        src/filter/Filter.h
        src/filter/BoxFilter.h
        src/filter/TriangleFilter.h
        src/filter/GaussianFilter.h
        src/filter/MitchellFilter.h
        src/filter/SincFilter.h
        src/shape/Shape.h
        src/material/BxDF.h
        src/material/Fresnel.h
        src/material/DielectricFresnel.h
        src/material/ConductorFresnel.h
        src/material/SpecularReflection.h
        src/material/SpecularTransmission.h
        src/material/FresnelSpecular.h
        src/material/LambertianReflection.h
        src/material/LambertianTransmission.h
        src/material/OrenNayarReflection.h
        src/material/MicrofacetDistribution.h
        src/material/BeckmannSpizzichinoDistribution.h
        src/material/TrowbridgeReitzDistribution.h
        src/material/MicrofacetReflection.h
        src/material/MicrofacetTransmission.h
        src/medium/Medium.h
        src/camera/CameraSample.h
        src/camera/Camera.h
        src/camera/ProjectiveCamera.h
        src/camera/OrthographicCamera.h
        src/camera/PerspectiveCamera.h
        src/integrator/Integrator.h
        src/integrator/SamplerIntegrator.h src/shape/Sphere.cpp src/shape/Sphere.h)
set(SOURCE
        src/main.cpp
        src/Pixel.cpp
        src/Film.cpp
        src/Transform.cpp
        src/Ray.cpp
        src/Scene.cpp
        src/spectrum/RGBSpectrum.cpp
        src/spectrum/XYZSpectrum.cpp
        src/filter/Filter.cpp
        src/filter/BoxFilter.cpp
        src/filter/TriangleFilter.cpp
        src/filter/GaussianFilter.cpp
        src/filter/MitchellFilter.cpp
        src/filter/SincFilter.cpp
        src/shape/Shape.cpp
        src/material/BxDF.cpp
        src/material/Fresnel.cpp
        src/material/DielectricFresnel.cpp
        src/material/ConductorFresnel.cpp
        src/material/SpecularReflection.cpp
        src/material/SpecularTransmission.cpp
        src/material/FresnelSpecular.cpp
        src/material/LambertianReflection.cpp
        src/material/LambertianTransmission.cpp
        src/material/OrenNayarReflection.cpp
        src/material/MicrofacetDistribution.cpp
        src/material/BeckmannSpizzichinoDistribution.cpp
        src/material/TrowbridgeReitzDistribution.cpp
        src/material/MicrofacetReflection.cpp
        src/material/MicrofacetTransmission.cpp
        src/medium/Medium.cpp
        src/camera/CameraSample.cpp
        src/camera/Camera.cpp
        src/camera/ProjectiveCamera.cpp
        src/camera/OrthographicCamera.cpp
        src/camera/PerspectiveCamera.cpp
        src/integrator/Integrator.cpp
        src/integrator/SamplerIntegrator.cpp src/shape/Sphere.cpp src/shape/Sphere.h)
add_executable(PhysicalRenderer
        ${HEADER}
        ${SOURCE})

# Eigen
find_package(Eigen3)
include_directories(${EIGEN3_INCLUDE_DIR})